# golem95

./: ChangeLog  Makefile  Makefile.am  README.md  configure.ac  golem95.pc.in  meson.build  meson_options.txt
avh_olo-3.6.1/: Makefile.am  Makefile.dep  README  avh_olo.f90  avh_olo_xkind.f90.in
demos/: DemoContents  Makefile.am  README  SusyLandau.f90  demo_3point.f90  demo_4photon.f90  demo_4point.f90  demo_5point.f90  demo_6point.f90  demo_LT.f  demo_a55_dets_sing.f90  demo_a55_dets_sing.txt  demo_cmplx_masses.f90  demo_detG.txt  demo_detg.f90  demo_tens_mod.f90  demo_tens_rec.f90  plot_demo_A55.gp  plotdetG_Im.gp  plotdetG_Re.gp  table_of_results_3point_option1.txt  table_of_results_3point_option2.txt  table_of_results_3point_option3.txt  table_of_results_3point_option4.txt  table_of_results_3point_option5.txt  table_of_results_3point_option6.txt  table_of_results_3point_option7.txt  table_of_results_4photon.txt  table_of_results_4point_option1.txt  table_of_results_4point_option2.txt  table_of_results_4point_option3.txt  table_of_results_4point_option4.txt  table_of_results_4point_option5.txt  table_of_results_4point_option6.txt  table_of_results_4point_option7.txt  table_of_results_4point_option8.txt  table_of_results_5point.txt  table_of_results_6point.txt  table_of_results_LT.txt
doc/: robodoc.rc
doc/html/: masterindex.html  robo_functions.html  robo_generics.html  robo_modules.html  robo_sourcefiles.html  robo_types.html  toc_index.html
doc/html/form_factor/: form_factor_1p_f90.html  form_factor_2p_f90.html  form_factor_3p_f90.html  form_factor_4p_f90.html  form_factor_5p_f90.html  form_factor_6p_f90.html
doc/html/higherrank/: form_factor_higher_ranks_f90.html  generic_function_np_f90.html
doc/html/integrals/four_point/: function_4p1m_f90.html  function_4p2m_3mi_onshell_f90.html  function_4p2m_adj_f90.html  function_4p2m_opp_f90.html  function_4p3m_f90.html  function_4p4m_f90.html  function_4p_ql10_f90.html  function_4p_ql11_f90.html  function_4p_ql12_f90.html  function_4p_ql13_f90.html  function_4p_ql14_f90.html  function_4p_ql15_f90.html  function_4p_ql16_f90.html  function_4p_ql6_f90.html  function_4p_ql7_f90.html  function_4p_ql8_f90.html  function_4p_ql9_f90.html  generic_function_4p_f90.html
doc/html/integrals/one_point/: generic_function_1p_f90.html
doc/html/integrals/three_point/: function_3p0m_1mi_f90.html  function_3p1m_1mi_f90.html  function_3p1m_2mi_f90.html  function_3p1m_f90.html  function_3p2m_1mi_f90.html  function_3p2m_f90.html  function_3p3m_f90.html  function_3p_finite_f90.html  generic_function_3p_f90.html  mod_gn_f90.html  mod_h0_f90.html  mod_he_f90.html  mod_hf_f90.html  mod_kn_f90.html
doc/html/integrals/two_point/: function_2p0m_1mi_f90.html  function_2p0m_mi_f90.html  function_2p_m1m2_f90.html  generic_function_2p_f90.html
doc/html/interface/: ga0_f90.html  gb0_f90.html  gc0_f90.html  gd0_f90.html  ge0_f90.html  gf0_f90.html  tens_comb_f90.html  tens_rec_f90.html  tensor_integrals_f90.html  tool_lt_to_golem_f90.html
doc/html/kinematic/: inverse_matrice_f90.html  matrice_s_f90.html
doc/html/module/: array_f90.html  cache_f90.html  cache_generic_f90.html  constante_f90.html  equal_f90.html  form_factor_type_f90.html  kronecker_f90.html  lt_to_golem_f90.html  more_integ_info_f90.html  multiply_div_f90.html  parametre_f90.html  precision_f90.html  precision_golem_f90.html  s_matrix_type_f90.html  sortie_erreur_f90.html  spinor_f90.html  translate_f90.html  tri_f90.html  z_log_f90.html  zdilog_f90.html
doc/html/numerical/: mod_adapt_gauss_f90.html  mod_numeric_f90.html
form_factor/: Makefile
higherrank/: Makefile
integrals/: Makefile
integrals/four_point/: Makefile
integrals/one_point/: Makefile
integrals/three_point/: Makefile
integrals/two_point/: Makefile
interface/: Makefile
kinematic/: Makefile
module/: Makefile
numerical/: Makefile
src/: Makefile.am
src/form_factor/: Makefile.am
src/higherrank/: Makefile.am
src/integrals/four_point/: Makefile.am  meson.build
src/integrals/one_point/: Makefile.am  Makefile.dep
src/integrals/three_point/: Makefile.am
src/integrals/two_point/: Makefile.am
src/interface/: Makefile.am
src/kinematic/: Makefile.am
src/module/: Makefile.am  meson.build
src/numerical/: Makefile.am
tool/highrank/: gen_form_factors.py
tool/tens_rec/: robodoc.txt  tens.py
